# summarizer

./: render.yaml
api/: .env.example  .gitignore  Dockerfile  README.md  build.py  pyproject.toml  requirements.txt  wsgi.py
api/src/: article.py  errors.py  monitoring.py  server.py  summarizer.py  video.py
api/src/scraping/: page.py  simplesrt.py  video.py
api/src/summarizers/: all.py  gpt.py  sentence_embeddings.py  summarizer.py  sumy.py  tf_idf.py
webapp/: .env.example  .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.js  tsconfig.json
webapp/config/: env.js  webpack.config.js
webapp/public/: index.html  manifest.json
webapp/scripts/: build.js  start.js
webapp/src/: index.tsx  main.tsx  routeTree.gen.ts
webapp/src/App/: index.tsx  styles.tsx
webapp/src/app/: app.tsx
webapp/src/components/Content/: index.tsx  styles.tsx
webapp/src/components/Logo/: index.tsx  styles.tsx
webapp/src/components/algorithm-badge/: algirithm-badge.tsx
webapp/src/components/logo/: logo.tsx
webapp/src/components/select/: select.tsx
webapp/src/components/site-badge/: site-badge.tsx
webapp/src/components/summary/: article.tsx  video.tsx
webapp/src/pages/Frontpage/: index.tsx  styles.tsx
webapp/src/pages/Summary/: index.tsx  styles.tsx
webapp/src/queries/: common.ts  summarize.ts
webapp/src/routes/: __root.tsx  index.tsx
webapp/src/routes/s/: $.tsx  _layout.tsx
webapp/src/types/: react-app-env.d.ts
webapp/src/utils/: analytics.ts  monitoring.ts  mq.ts  normalize.ts  typography.ts  use-localstorage.ts
(+4 files in other folders)
