[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Brandon Aldrich <brandon@aldr.io>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.8"
gunicorn = "^20.1.0"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
favicon = "^0.7.0"
sumy = "^0.11.0"
numpy = "^1.24.1"
openai = "^0.26.0"
yt-dlp = "^2024.7.2"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
